--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
@@ -4,7 +4,7 @@
     <head>
 
         <meta charset="utf-8">
-        <title>DL4J Training UI</title>
+        <title>@i18n.getMessage("train.pagetitle")</title>
             <!-- start: Mobile Specific -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
             <!-- end: Mobile Specific -->
@@ -37,7 +37,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="index.html"><span>DL4J Training UI</span></a>
+                    <a class="brand" href="index.html"><span>@i18n.getMessage("train.pagetitle")</span></a>
                 </div>
             </div>
         </div>
@@ -50,10 +50,10 @@
                 <div id="sidebar-left" class="span2">
                     <div class="nav-collapse sidebar-nav">
                         <ul class="nav nav-tabs nav-stacked main-menu">
-                            <li><a href="overview"><i class="icon-bar-chart"></i> <span class="hidden-tablet"> Overview</span></a></li>
-                            <li class="active"><a href="javascript:void(0);"><i class="icon-tasks"></i> <span class="hidden-tablet"> Model</span></a></li>
-                            <li><a href="system"><i class="icon-dashboard"></i> <span class="hidden-tablet"> System</span></a></li>
-                            <li><a href="help"><i class="icon-star"></i> <span class="hidden-tablet"> User Guide</span></a></li>
+                            <li><a href="overview"><i class="icon-bar-chart"></i> <span class="hidden-tablet">@i18n.getMessage("train.nav.overview")</span></a></li>
+                            <li class="active"><a href="javascript:void(0);"><i class="icon-tasks"></i> <span class="hidden-tablet">@i18n.getMessage("train.nav.model")</span></a></li>
+                            <li><a href="system"><i class="icon-dashboard"></i> <span class="hidden-tablet">@i18n.getMessage("train.nav.system")</span></a></li>
+                            <li><a href="help"><i class="icon-star"></i> <span class="hidden-tablet">@i18n.getMessage("train.nav.userguide")</span></a></li>
                             <li>
                                 <a class="dropmenu" href="javascript:void(0);"><i class="icon-folder-close-alt"></i> <span class="hidden-tablet"> Language</span></a>
                                 <ul>
@@ -100,7 +100,7 @@
 
                         <div class="box">
                             <div class="box-header">
-                                <h2><b>Layer Information</b></h2>
+                                <h2><b>@i18n.getMessage("train.model.layerInfoTable")</b></h2>
                             </div>
                             <div class="box-content">
                                 <table class="table table-bordered table-striped table-condensed" id="layerInfo"></table>
@@ -109,40 +109,41 @@
 
                         <div class="box">
                             <div class="box-header">
-                                <h2><b>Mean Magnitude Update Ratios - Log10</b></h2>
+                                <h2><b>@i18n.getMessage("train.overview.chart.updateRatioTitle"): log<sub>10</sub></b></h2>
                             </div>
                             <div class="box-content">
                                 <div id="meanmag" class="center" style="height: 300px;" ></div>
-                                <p id="hoverdata"><b>Log10 Ratio:</b> <span id="yMeanMagnitudes">0</span>
-                                    , <b>Iteration:</b> <span id="xMeanMagnitudes">0</span></p>
+                                <p id="hoverdata"><b>log<sub>
+                                    10</sub> @i18n.getMessage("train.overview.chart.updateRatioTitleShort")</b> <span id="yMeanMagnitudes">0</span>
+                                    , <b>@i18n.getMessage("train.overview.charts.iteration"):</b> <span id="xMeanMagnitudes">0</span></p>
                             </div>
                         </div>
 
                         <div class="box">
                             <div class="box-header">
-                                <h2><b>Activations</b></h2>
+                                <h2><b>@i18n.getMessage("train.model.activationsChart.title")</b></h2>
                             </div>
                             <div class="box-content">
                                 <div id="activations" class="center" style="height: 300px;" ></div>
-                                <p id="hoverdata"><b>Activation:</b> <span id="yActivations">0</span>
-                                    , <b>Iteration:</b> <span id="xActivations">0</span></p>
+                                <p id="hoverdata"><b>@i18n.getMessage("train.model.activationsChart.titleShort"):</b> <span id="yActivations">0</span>
+                                    , <b>@i18n.getMessage("train.overview.charts.iteration"):</b> <span id="xActivations">0</span></p>
                             </div>
                         </div>
 
                         <div class="box">
                             <div class="box-header">
-                                <h2><b>Learning Rates</b></h2>
+                                <h2><b>@i18n.getMessage("train.model.lrChart.title")</b></h2>
                             </div>
                             <div class="box-content">
                                 <div id="learningrate" class="center" style="height: 300px;" ></div>
-                                <p id="hoverdata"><b>Learning Rate:</b> <span id="yLearningRate">0</span>
-                                    , <b>Iteration:</b> <span id="xLearningRate">0</span></p>
+                                <p id="hoverdata"><b>@i18n.getMessage("train.model.lrChart.titleShort"):</b> <span id="yLearningRate">0</span>
+                                    , <b>@i18n.getMessage("train.overview.charts.iteration"):</b> <span id="xLearningRate">0</span></p>
                             </div>
                         </div>
 
                         <div class="box">
                             <div class="box-header">
-                                <h2><b>Parameters Histogram</b></h2>
+                                <h2><b>@i18n.getMessage("train.model.paramHistChart.title")</b></h2>
                             </div>
                             <div class="box-content">
                                 <div id="parametershistogram" class="center" style="height: 300px;"></div>
@@ -151,7 +152,7 @@
 
                         <div class="box">
                             <div class="box-header">
-                                <h2><b>Updates Histogram</b></h2>
+                                <h2><b>@i18n.getMessage("train.model.updateHistChart.title")</b></h2>
                             </div>
                             <div class="box-content">
                                 <div id="updateshistogram" class="center" style="height: 300px;"></div>
