System page: fix charts, add tool-tip, formatting for memory quantities
Former-commit-id: 80909cda58352f8350969173d9981a2310ea62c6

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingSystem.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingSystem.scala.html
@@ -101,7 +101,7 @@
 
                                             <div class="box span6">
                                                 <div class="box-header">
-                                                    <h2><b>@i18n.getMessage("train.system.chart.jvmTitle")</b></h2>
+                                                    <h2><b>@i18n.getMessage("train.system.chart.jvmTitle") %</b></h2>
                                                 </div>
                                                 <div class="box-content">
                                                     <div id="jvmmemorychart" class="center" style="height: 300px;" ></div>
@@ -112,7 +112,7 @@
                                                 <!-- Off Heap Memory Utlization Chart -->
                                             <div class="box span6">
                                                 <div class="box-header">
-                                                    <h2><b>@i18n.getMessage("train.system.chart.offHeapTitle")</b></h2>
+                                                    <h2><b>@i18n.getMessage("train.system.chart.offHeapTitle") %</b></h2>
                                                 </div>
                                                 <div class="box-content">
                                                     <div id="offheapmemorychart" class="center" style="height: 300px;" ></div>
