Model page: histogram fixes and parameter selection
Former-commit-id: a21ba34baa6b695fc5418523c422b3609e739d14

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
@@ -144,6 +144,8 @@
                         <div class="box">
                             <div class="box-header">
                                 <h2><b>@i18n.getMessage("train.model.paramHistChart.title")</b></h2>
+                                <div id="paramhistSelected" style="float:left"></div>
+                                <div id="paramHistButtonsDiv" style="float:right"></div>
                             </div>
                             <div class="box-content">
                                 <div id="parametershistogram" class="center" style="height: 300px;"></div>
@@ -153,6 +155,8 @@
                         <div class="box">
                             <div class="box-header">
                                 <h2><b>@i18n.getMessage("train.model.updateHistChart.title")</b></h2>
+                                <div id="updatehistSelected" style="float:left"></div>
+                                <div id="updateHistButtonsDiv" style="float:right"></div>
                             </div>
                             <div class="box-content">
                                 <div id="updateshistogram" class="center" style="height: 300px;"></div>
