Fix model information table rendering
Former-commit-id: cb7dcccf9189535ab273a057d9d9851733e77c72

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
@@ -100,7 +100,7 @@
 
                         <div class="box">
                             <div class="box-header">
-                                <h2><b>@i18n.getMessage("train.model.layerInfoTable")</b></h2>
+                                <h2><b>@i18n.getMessage("train.model.layerInfoTable.title")</b></h2>
                             </div>
                             <div class="box-content">
                                 <table class="table table-bordered table-striped table-condensed" id="layerInfo"></table>
@@ -213,7 +213,6 @@
 				$(document).ready(function () {
                     renderModelGraph();
                     renderModelPage();
-                    renderLayerTable();
                 });
 		</script>
 
