Add Zero State on Input Layer (Model Page)
Former-commit-id: 872c1512cccddee38b3d2823cc84e5aaaf67ce9e [formerly 9d32e8685cb662a6da925f88b7b7a08e36b11559]
Former-commit-id: c012fda63961fba3f2521482118b79b0b14bf726

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
@@ -96,7 +96,7 @@
                         <div id="layers"></div>
                     </div>
                         <!-- Start Layer Details -->
-                    <div class="row-fluid span6" id="0">
+                    <div class="row-fluid span6" id="layerDetails">
 
                         <div class="box">
                             <div class="box-header">
@@ -164,7 +164,39 @@
                         </div>
 
                     </div>
-                        <!-- End Layer Details-->
+                    <!-- End Layer Details-->
+
+                    <!-- Begin Zero State -->
+                    <div class="row-fluid span6" id="zeroState">
+                        <div class="box">
+                            <div class="box-header">
+                                <h2><b>Getting Started</b></h2>
+                            </div>
+                            <div class="box-content">
+                                <div class="page-header">
+                                    <h1>Layer Visualization UI</h1>
+                                </div>
+                                <div class="row-fluid">
+                                    <div class="span12">
+                                        <h2>Overview</h2>
+                                        <p>
+                                            The layer visualization UI renders network structure dynamically. Users can inspect node layer parameters by clicking on the various elements of the GUI to see general information as well as overall network information such as performance.
+                                        </p>
+                                        <h2>Actions</h2>
+                                        <p>On the <b>left</b>, you will find an interactive layer visualization.</p>
+                                        <p>
+                                        <ul>
+                                            <li><b>Clicking</b> - Click on a layer to inspect network performance.</li>
+                                            <li><b>Scrolling</b> - Drag the GUI to move the model around. </li>
+                                            <li><b>Zooming</b> - Use your mouse scroll wheel or laptop touch pad to zoom in and out.</li>
+                                        </ul>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End Zero State-->
                 </div>
                     <!-- End Content -->
             </div> <!-- End Container -->
