Fix layer model graph style (Model Page)
Former-commit-id: a2eef4a2d331707f3589b6b0746d6a4b5a9d208b

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
@@ -81,11 +81,10 @@
                 <style>
                 /* Graph */
                 #layers {
-                    height: 100%;
-                    width: 50%;
-                    position: absolute;
-                    left: 0;
-                    top: 0;
+                    height: 725px; /* IE8 */
+                    height: 90vh;
+                    width: 100%;
+                    border: 2px solid #eee;
                 }
                 </style>
 
@@ -186,9 +185,8 @@
                                         <p>On the <b>left</b>, you will find an interactive layer visualization.</p>
                                         <p>
                                         <ul>
-                                            <li><b>Clicking</b> - Click on a layer to inspect network performance.</li>
-                                            <li><b>Scrolling</b> - Drag the GUI to move the model around. </li>
-                                            <li><b>Zooming</b> - Use your mouse scroll wheel or laptop touch pad to zoom in and out.</li>
+                                            <li><b>Clicking</b> - Click on a layer to load network performance metrics.</li>
+                                            <li><b>Scrolling</b> - Drag the GUI with your mouse or touchpad to move the model around. </li>
                                         </ul>
                                         </p>
                                     </div>
